--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webgallery-webwall",
-  "version": "1.0.0",
+  "name": "web-wall",
+  "version": "1.0.1",
   "main": "index.js",
   "type": "module",
   "types": "index.d.ts",
